<resources>
    <string name="app_name">My Ring App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Riwayat</string>
    <string name="title_notifications">Profile</string>
    <string name="ini_adalah_icon_ok">ini adalah icon ok</string>

    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="pilih_Makanan">Pilih Makanan Favoritmu</string>
    <string name="pilih_Makanan_desc">membuat acaramu semakin menawan dengan\nmenyediakan makanan favoritmu</string>
    <string name="masukan_alamat">Masukan Alamat Anda</string>
    <string name="masukan_alamat_desc">Cara yang sangat mudah untuk mendapatkan\nmakanan di tempat Anda tinggal, ketika Anda\nmemasukkan alamat rumah Anda</string>
    <string name="kembali">Kembali</string>
    <string name="memulaiAplikasi">Memulai Aplikasi</string>
    <string name="dapatkan_makanan">Dapatkan Makanan Anda</string>
    <string name="dapatkan_makanan_desc">kami menyediakan pengiriman tercepat ke rumah\nAnda ketika Anda membutuhkan makanan</string>
    <string name="myring">MyRing</string>
    <string name="catering_delevery_in_mataram">Catering Delevery in Mataram</string>
    <string name="masuk">Masuk</string>
    <string name="start_your_journey">Start Your Journey!</string>
    <string name="email">Email</string>
    <string name="masukan_email_anda">Masukan Email Anda</string>
    <string name="masukan_password_anda">Masukan Password Anda</string>
    <string name="membuat_akun_baru">Membuat Akun Baru</string>
    <string name="nama_menu">Nama Menu: </string>
    <string name="harga">Harga: </string>
    <string name="pembayaran_berhasil">
        "Pembayaran selesai, pesanan anda sedang disiapkan, mohon menunggu, dan Pantau terus fitur riwayat pesanan agar anda tau proses pesanan anda!\nTerimakasih
    </string>
    <string name="editprofile">Edit Profile</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="simpan">simpan</string>
</resources>