<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:layout_marginTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="26dp"
    android:orientation="vertical"
    tools:context=".ui.auth.signin.SigninFragment">

    <ImageView
        android:layout_width="133dp"
        android:layout_height="163dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_login" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16spblack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/EditText.PoppinsNormal14spabu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/shape_rectangle_orangeborder"
        android:hint="@string/masukan_email_anda"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        style="@style/TextView.PoppinsNormal16spblack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditText.PoppinsNormal14spabu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/shape_rectangle_orangeborder"
        android:hint="@string/masukan_password_anda"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnSignin"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSignup"
        android:text="@string/membuat_akun_baru"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        style="@style/Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>